// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/LoadMore Check snapshots should renders correctly with show < total 1`] = `
<div
  className="consonant-load-more"
  data-testid="consonant-load-more"
>
  <div
    className="consonant-load-more--inner"
  >
    <p
      className="consonant-load-more--text"
      data-testid="consonant-load-more--text"
    >
      i18n.loadMore.resultsQuantityText 1 100
    </p>
    <button
      className="consonant-load-more--btn"
      data-testid="load-more__button"
      onClick={[MockFunction]}
      tabIndex="0"
      type="button"
    >
      i18n.loadMore.btnText
    </button>
  </div>
</div>
`;

exports[`Consonant/LoadMore Check snapshots should renders correctly with show > total 1`] = `
<div
  className="consonant-load-more"
  data-testid="consonant-load-more"
>
  <div
    className="consonant-load-more--inner"
  >
    <p
      className="consonant-load-more--text"
      data-testid="consonant-load-more--text"
    >
      i18n.loadMore.resultsQuantityText 100 1
    </p>
  </div>
</div>
`;
